--- a/Web/app/partials/speakersList/listSpeakers.html
+++ b/Web/app/partials/speakersList/listSpeakers.html
@@ -1,10 +1,7 @@
-<ytm-nav-menu></ytm-nav-menu>
+<ytm-menu></ytm-menu>
 <div class="container body-content">
     <div>
-        <h2>{{list.Name}}
-            </br>
-            <small>{{event.Name}}</small>
-        </h2>
+        <h2>{{list.Name}}</h2>
         <!-- Buttons -->
         <div class="btn-toolbar" role="toolbar" style="margin-bottom:5px">
             <!-- Status -->
