--- a/Web/app/partials/event/listEvents.html
+++ b/Web/app/partials/event/listEvents.html
@@ -1,6 +1,6 @@
 <ytm-menu></ytm-menu>
 <div class="container body-content">
-    <div ng-hide="selectedEvent">
+    <div ng-hide="event">
         <h2>Find an Event</h2>
         <div class="list-group">
             <div class="form-group">
@@ -34,19 +34,29 @@
             </a>
         </div>
     </div>
-    <div ng-show="selectedEvent">
-        <h2>{{selectedEvent.Name}}
+    <div ng-show="event">
+        <h2>{{event.Name}}
             <br>
-            <small>{{selectedEvent.DisplayDate}}</small>
+            <small>{{event.DisplayDate}}</small>
         </h2>
-        <p ng-show="selectedEvent.Description">{{selectedEvent.Description}}</p>
+        <p ng-show="event.Description">{{event.Description}}</p>
         <p>
             <button type="button" ng-click="attend()" class="btn btn-primary btn-lg">Attending</button>
             <button type="button" ng-click="selectEvent()" class="btn btn-default btn-lg">Not this one</button>
         </p>
         <div ng-show="attendees.length > 0">
             <h3>People already attending</h3>
-            <ytm-attendee-list attendees="attendees"></ytm-attendee-list>
+            <div class="form-group" ng-show="attendees.count > 10">
+                <div class="input-group">
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-search"></span>
+                    </span>
+                    <input type="text" class="form-control" ng-model="queryAttendees" placeholder="Find people..." />
+                </div>
+            </div>
+            <a href="#/viewProfile/{{attendee.Profile.ProfileID}}" class="list-group-item" ng-animate="'animate'" ng-repeat="attendee in attendees | filter:queryAttendees">
+                <ytm-attendee>
+            </a>
         </div>
     </div>
 </div>
