--- a/Web/app/partials/poll/deletePoll.html
+++ b/Web/app/partials/poll/deletePoll.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <button type="button" class="close" ng-click="cancelDelete()" aria-hidden="true">&times;</button>
-    <h4 class="modal-title">Really?</h4>
+    <h4 class="modal-title">Delete Poll</h4>
 </div>
 <div class="modal-body">
     <p>Once you delete a Poll it is gone forever, and no one will be able to access it.</p>
