--- a/Web/app/partials/poll/editPoll.html
+++ b/Web/app/partials/poll/editPoll.html
@@ -1,9 +1,6 @@
 <ytm-menu></ytm-menu>
 <div class="container body-content">
-    <h2>{{title}}
-        <br/>
-        <small>{{event.Name}}</small>
-    </h2>
+    <h2>{{title}}</h2>
     <form name="form" role="form" class="css-form form-horizontal" novalidate>
         <div style="margin-left:15px; margin-right:15px">
             <div class="form-group">
