--- a/Web/app/partials/speakersList/editSpeakersList.html
+++ b/Web/app/partials/speakersList/editSpeakersList.html
@@ -1,9 +1,6 @@
 <ytm-menu></ytm-menu>
 <div class="container body-content">
-    <h2>{{title}}
-        <br/>
-        <small>{{event.Name}}</small>
-    </h2>
+    <h2>{{title}}</h2>
     <form name="form" role="form" class="css-form form-horizontal" style="margin:15px" novalidate>
         <div class="form-group">
             <div class="input-group">
