--- a/Web/app/partials/speakersList/listSpeakersLists.html
+++ b/Web/app/partials/speakersList/listSpeakersLists.html
@@ -1,10 +1,7 @@
-<ytm-nav-menu></ytm-nav-menu>
+<ytm-menu></ytm-menu>
 <div class="container body-content">
     <div>
-        <h2>Speakers Lists
-            </br>
-            <small>{{event.Name}}</small>
-        </h2>
+        <h2>Speakers Lists</h2>
         <div class="list-group">
             <div class="form-group">
                 <div class="row">
