--- a/Web/app/partials/attendee/deleteAttendee.html
+++ b/Web/app/partials/attendee/deleteAttendee.html
@@ -1,11 +1,14 @@
 <div class="modal-header">
     <button type="button" class="close" ng-click="cancelDelete()" aria-hidden="true">&times;</button>
-    <h4 class="modal-title">Leave delegation</h4>
+    <h4 class="modal-title" ng-show="isEditingSelf">Leave delegation</h4>
+    <h4 class="modal-title" ng-hide="isEditingSelf">Remove delegate</h4>
 </div>
 <div class="modal-body">
-   	Do you want to leave the '{{attendee.Name}}' delegation?
+   	<span ng-show="isEditingSelf">Do you want to leave the {{selectedAttendee.Name}} delegation?</span>
+   	<span ng-hide="isEditingSelf">Do you want to remove {{selectedAttendee.Profile.Name}} from the {{selectedAttendee.Name}} delegation?</span>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-default" ng-click="cancelDelete()">Cancel</button>
-    <button type="button" class="btn btn-danger" ng-click="confirmDelete()">Leave</button>
+    <button type="button" class="btn btn-danger" ng-click="confirmDelete()" ng-show="isEditingSelf">Leave</button>
+    <button type="button" class="btn btn-danger" ng-click="confirmDelete()" ng-hide="isEditingSelf">Remove</button>
 </div>
