Allows an Event creator to Add attendees (without profiles)
Resolves #6 and Resolves #4

--- a/Web/app/partials/attendee/listAttendees.html
+++ b/Web/app/partials/attendee/listAttendees.html
@@ -1,10 +1,14 @@
 <ytm-menu></ytm-menu>
 <div class="container body-content">
     <a class="list-group-item"><ytm-attendee></ytm-attendee></a>
-    <div ng-show="attendees.length > 0">
+    <div>
+        <!-- Add new Attendee button -->
+        <button type="button" class="btn btn-primary pull-right" ng-show="isCreator" ng-click="newAttendee()">
+            <span class="glyphicon glyphicon-plus" style="margin-right:5px"></span>New
+        </button>
         <!-- Attendee stats -->
-        <h2 ng-show="attendees.length == 1"><span class="label label-primary">1</span> other Attendee</h2>
-        <h2 ng-show="attendees.length > 1"><span class="label label-primary"> {{attendees.length}}</span> other Attendees</h2>
+        <h2 ng-show="attendees.length == 1"><span class="label label-primary">1</span> Attendee</h2>
+        <h2 ng-show="attendees.length > 1"><span class="label label-primary"> {{attendees.length}}</span> Attendees</h2>
         <!-- Attendee search  -->
         <div class="form-group" ng-show="attendees.length > 10">
             <div class="input-group">
