Fixed Vote filter that wasn't working when there were Attendees without a Profile

--- a/Web/app/partials/poll/listVotes.html
+++ b/Web/app/partials/poll/listVotes.html
@@ -48,12 +48,12 @@
                 <label class="btn btn-default active" ng-model="voteFilter.against" btn-checkbox>Against</label>
                 <label class="btn btn-default active" ng-model="voteFilter.abstain" btn-checkbox>Abstain</label>
             </div>
-            <!-- Attendee search -->
+            <!-- Vote search -->
             <div class="input-group">
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-search"></span>
                 </span>
-                <input type="text" class="form-control" ng-model="voteFilter.text" placeholder="Find vote..." />
+                <input type="text" class="form-control" ng-model="voteFilter.text" placeholder="Find people..." />
             </div>
         </div>
         <!-- Vote list -->
