--- a/Web/app/partials/poll/pollList.html
+++ b/Web/app/partials/poll/pollList.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="well" ng-show="polls.length == 0">There is not yet any Polls to vote on</div>
-            <a href="#/polls/{{poll.PollID}}" class="list-group-item" ng-repeat="poll in polls | filter:query">
+            <a href="#/polls/{{poll.PollID}}" class="list-group-item" ng-repeat="poll in polls | filter:query | orderBy:'Name'">
                 <h4 class="list-group-item-heading">{{poll.Name}}<br>
                     <small ng-show="poll.IsPassing">Passing</small>
                     <small ng-hide="poll.IsPassing">Failing</small>
