--- a/Web/app/partials/speakersList/addSpeaker.html
+++ b/Web/app/partials/speakersList/addSpeaker.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <!-- Attendee list -->
-    <a class="list-group-item" ng-animate="'animate'" ng-repeat="attendee in attendees | filter:queryAttendees">
+    <a class="list-group-item" ng-animate='animate' ng-repeat="attendee in attendees | filter:queryAttendees | orderBy:'Name'">
         <ytm-speakers-list-attendee></ytm-speakers-list-attendee>
     </a>
 </div>
