--- a/Web/app/partials/speakersList/listSpeakersLists.html
+++ b/Web/app/partials/speakersList/listSpeakersLists.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="well" ng-show="lists.length == 0">There is not yet any Speakers lists</div>
-            <a href="#/speakers/{{list.SpeakersListID}}" class="list-group-item" ng-repeat="list in lists | filter:query">
+            <a href="#/speakers/{{list.SpeakersListID}}" class="list-group-item" ng-repeat="list in lists | filter:query | orderBy:'Name'">
                 <h4 class="list-group-item-heading">{{list.Name}}</h4>
                 <div style="background-color:lightgreen; height:5px; margin-bottom:5px" ng-show="list.Status == 'Open'"></div>
                 <div style="background-color:red; height:5px; margin-bottom:5px" ng-show="list.Status == 'Closed'"></div>
