Updated the landing page

--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -4,7 +4,7 @@
     </div>
     <div class="jumbotron">
         <p>
-            Helps delegates and organisers of Model UNs manage the boring details of debate from their phone, tablet, or computer. Everyone spends less time on the rules and more time on the debate
+            Helps delegates and organisers with the boring details of Model UNs from their phone, tablet, or computer. Everyone spends less time on the rules and more time on the debate
         </p>
         <button type="button" id="loginButton" class="btn btn-primary btn-lg" ng-click="login()">Get started</button>
     </div>
@@ -65,10 +65,10 @@
         </accordion-group>
         <accordion-group heading="Can I use yieldto.me without a Facebook account?">
           So you don't need to remember yet another username and password we are taking advantage of Facebook's login capabilities. yieldto.me won't have the ability to post on your wall or anything like that. We will just record your Facebook user ID and email address so we can make sure we remember you. 
-          Unfortunately, if you don't have Facebook- you can't use yieldto.me at this stage. But, you can vote to support other login mechanisms on our <a href="https://yieldtome.uservoice.com">feature request site</a>
+          Unfortunately, if you don't have Facebook- you can't use yieldto.me at this stage. But, you can vote to support other login mechanisms on our <a href="https://yieldtome.uservoice.com"  target="_blank">feature request site</a>
         </accordion-group>
-        <accordion-group heading="What is coming up next on your roadmap?">
-          That is partly up to you. We have lots of ideas and you can influence the priority by voting on our <a href="https://yieldtome.uservoice.com">feature request site</a>. Some of the ideas on the list are:
+        <accordion-group heading="What features will you add next?">
+          That is partly up to you. We have lots of ideas and you can influence the priority by voting on our <a href="https://yieldtome.uservoice.com"  target="_blank">feature request site</a>. Some of the ideas on the list are:
           <ul>
             <li>The ability to wink at another delegate, and get a wink back. Good for after-dark lobbying</li>
             <li>Privacy settings for each element on your profile</li>
@@ -76,6 +76,9 @@
             <li>iPhone and Android Apps</li>
             <li>Help overlays to assist first time users</li>
           </ul>
+        </accordion-group>
+        <accordion-group heading="I can contribute code?">
+          Yes. yieldto.me is open source- meaning you can see the code and contribute to fixing bugs and developing enhancements or new features. The code is <a href="http://www.github.com/bradleyscott/yieldtome" target="_blank">available on GitHub</a> for you to look at. We also have an RESTful API that can be used to develop your own stand-alone Apps and sites using yieldto.me's data. Get in contact if you want an API key.
         </accordion-group>
   </accordion>
 </div>
