Changed tag line and changed FAQ re contributing code

--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -4,7 +4,7 @@
     </div>
     <div class="jumbotron">
         <p>
-            Helps delegates and organisers with the boring details of Model UNs from their phone, tablet, or computer. Everyone spends less time on the rules and more time on the debate
+            Helps delegates and organisers with the boring details of Model UNs. Add yourself to a Speakers List or Vote during a Model UN using your phone, tablet or PC. Everyone spends less time on the rules and more time on the debate
         </p>
         <button type="button" id="loginButton" class="btn btn-primary btn-lg" ng-click="login()">Get started</button>
     </div>
@@ -77,8 +77,8 @@
             <li>Help overlays to assist first time users</li>
           </ul>
         </accordion-group>
-        <accordion-group heading="I can contribute code?">
-          Yes. yieldto.me is open source- meaning you can see the code and contribute to fixing bugs and developing enhancements or new features. The code is <a href="http://www.github.com/bradleyscott/yieldtome" target="_blank">available on GitHub</a> for you to look at. We also have an RESTful API that can be used to develop your own stand-alone Apps and sites using yieldto.me's data. Get in contact if you want an API key.
+        <accordion-group heading="How can I can contribute code?">
+          yieldto.me is open source- meaning you can see the code and contribute to fixing bugs and developing enhancements or new features. The code is <a href="http://www.github.com/bradleyscott/yieldtome" target="_blank">available on GitHub</a> for you to look at, fork, and submit pull requests to. We also have an RESTful API that can be used to develop your own stand-alone Apps and sites using yieldto.me's data. Get in contact if you want an API key.
         </accordion-group>
   </accordion>
 </div>
