--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -71,7 +71,7 @@
           That is partly up to you. We have lots of ideas and you can influence the priority by voting on our <a href="https://yieldtome.uservoice.com"  target="_blank">feature request site</a>. Some of the ideas on the list are:
           <ul>
             <li>The ability to wink at another delegate, and get a wink back. Good for after-dark lobbying</li>
-            <li>Privacy settings for each element on your profile</li>
+            <li>Delegate to delegate instant messaging</li>
             <li>Keyboard shortcuts - for power users with a keyboard</li>
             <li>iPhone and Android Apps</li>
             <li>Help overlays to assist first time users</li>
