--- a/Web/app/partials/profile/editProfile.html
+++ b/Web/app/partials/profile/editProfile.html
@@ -6,7 +6,7 @@
     </h2>
     <form name="form" role="form" class="css-form form-horizontal" novalidate>
         <div class="col-sm-3 hidden-xs">
-            <img ng-src="{{profile.ProfilePictureUri}}?type=large" class="img-responsive img-circle" />
+            <img ng-src="{{profile.ProfilePictureUri}}?type=large" class="img-responsive img-rounded" />
         </div>
         <div class="col-sm-9">
             <div class="form-group">
@@ -20,6 +20,10 @@
                 <div class="input-group">
                     <span class="input-group-addon" style="min-width:65px">email</span>
                     <input name="email" class="form-control" type="email" ng-model="profile.Email" ng-disabled="formDisabled" required placeholder="your@email.com" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-globe" ng-show="profile.IsEmailPublic" ng-click="profile.IsEmailPublic=false"></span>
+                        <span class="glyphicon glyphicon-lock" ng-hide="profile.IsEmailPublic"  ng-click="profile.IsEmailPublic=true"></span>
+                    </span>
                     <span class="form-control validation" ng-show="form.email.$invalid">This email looks wrong</span>
                 </div>
             </div>
@@ -28,13 +32,32 @@
                     <span class="input-group-addon" style="min-width:65px">phone</span>
                     <!-- TODO: Add in Regex validation for phone number -->
                     <input class="form-control" type="text" ng-model="profile.Phone" ng-disabled="formDisabled" placeholder="555-123-4567" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-globe" ng-show="profile.IsPhonePublic" ng-click="profile.IsPhonePublic=false"></span>
+                        <span class="glyphicon glyphicon-lock" ng-hide="profile.IsPhonePublic"  ng-click="profile.IsPhonePublic=true"></span>
+                    </span>
                 </div>
             </div>
             <div class="form-group">
                 <div class="input-group">
                     <span class="input-group-addon" style="min-width:65px">twitter</span>
                     <!-- TODO: Add in Regex validation for Twitter -->
-                    <input class="form-control" type="text" ng-model="profile.Twitter" ng-disabled="formDisabled" placeholder="yourTwitterName" />
+                    <input class="form-control" type="text" ng-model="profile.Twitter" ng-disabled="formDisabled" placeholder="@twitter" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-globe" ng-show="profile.IsTwitterPublic" ng-click="profile.IsTwitterPublic=false"></span>
+                        <span class="glyphicon glyphicon-lock" ng-hide="profile.IsTwitterPublic"  ng-click="profile.IsTwitterPublic=true"></span>
+                    </span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <span class="input-group-addon" style="min-width:65px">linkedIn</span>
+                    <!-- TODO: Add in Regex validation for LinkedIn -->
+                    <input class="form-control" type="text" ng-model="profile.LinkedIn" ng-disabled="formDisabled" placeholder="yourLinkedInName" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-globe" ng-show="profile.IsLinkedInPublic" ng-click="profile.IsLinkedInPublic=false"></span>
+                        <span class="glyphicon glyphicon-lock" ng-hide="profile.IsLinkedInPublic"  ng-click="profile.IsLinkedInPublic=true"></span>
+                    </span>
                 </div>
             </div>
             <div class="row">
