--- a/Web/app/partials/profile/viewProfile.html
+++ b/Web/app/partials/profile/viewProfile.html
@@ -6,7 +6,7 @@
     </h2>
     <form name="form" role="form" class="css-form form-horizontal" novalidate>
         <div class="col-sm-3 hidden-xs">
-            <a href="https://www.facebook.com/{{profile.FacebookID}}" target="_blank"><img ng-src="{{profile.ProfilePictureUri}}?type=large" class="img-responsive img-circle"/></a>
+            <a href="https://www.facebook.com/{{profile.FacebookID}}" target="_blank"><img ng-src="{{profile.ProfilePictureUri}}?type=large" class="img-responsive img-rounded"/></a>
         </div>
         <div class="col-sm-9">
             <div class="form-group"  ng-show="profile.Email && profile.IsEmailPublic">
