--- a/Web/app/partials/poll/vote.html
+++ b/Web/app/partials/poll/vote.html
@@ -1,5 +1,6 @@
 <div class="media">
     <!-- Profile picture -->
+    <img class="media-object pull-left" ng-src="img/profile.jpg" ng-hide="vote.Attendee.Profile" style="width:50px;height:50px" >
     <img class="media-object pull-left" ng-src="{{vote.Attendee.Profile.ProfilePictureUri}}" ng-click="showProfile(vote.Attendee.Profile.ProfileID)">
     <div class="media-body">
         <!-- Edit vote button -->
