--- a/Web/app/partials/speakersList/speaker.html
+++ b/Web/app/partials/speakersList/speaker.html
@@ -1,5 +1,6 @@
 <div class="media">
     <!-- Profile picture -->
+    <img class="media-object pull-left" ng-src="img/profile.jpg" ng-hide="speaker.Attendee.Profile" style="width:50px;height:50px" >
     <img class="media-object pull-left" ng-src="{{speaker.Attendee.Profile.ProfilePictureUri}}" ng-click="showProfile(speaker.Attendee.Profile.ProfileID)">
     <div class="media-body">
         <!-- Edit Speaker button -->
