Fixed spelling mistake on Home page

--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -77,7 +77,7 @@
             <li>Help overlays to assist first time users</li>
           </ul>
         </accordion-group>
-        <accordion-group heading="How can I can contribute code?">
+        <accordion-group heading="How can I contribute code?">
           yieldto.me is open source- meaning you can see the code and contribute to fixing bugs and developing enhancements or new features. The code is <a href="http://www.github.com/bradleyscott/yieldtome" target="_blank">available on GitHub</a> for you to look at, fork, and submit pull requests to. We also have an RESTful API that can be used to develop your own stand-alone Apps and sites using yieldto.me's data. Get in contact if you want an API key.
         </accordion-group>
   </accordion>
